--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
     <div class="start-game-box">
         <h1>Start SABU Game</h1>
         <a>** 주의사항 ** <br>
-            폴리곤 테스트넷인 Mumbai 네트워크를 사용하며 토큰은 아무런 가치가 없습니다.<br><br>
+            * 폴리곤 테스트넷인 Mumbai 네트워크를 사용하며 토큰은 아무런 가치가 없습니다.<br>
+            * 메타마스크가 웹에 설치되어 있지 않다면, 버튼은 작동하지 않습니다.<br><br>
             ** Game Rule ** <br>
             1. 게임 한 번 참가할 비용은 1 SABU입니다.<br>
             2. 시작 버튼을 누르면 4개의 버튼이 생성됩니다.<br>
